--- a/.github/workflows/AlnilamSolutionWorkflow.yml
+++ b/.github/workflows/AlnilamSolutionWorkflow.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  Build-TITAN:
+  Build-ALNILAM:
     uses: JaredDevAxity/AR_26_A_ARCHERNAR_ACTIONS/.github/workflows/compileTitan.yml@main
     with: 
       node-version: '16'
