--- a/.github/workflows/AlnilamSolutionWorkflow.yml
+++ b/.github/workflows/AlnilamSolutionWorkflow.yml
@@ -8,5 +8,8 @@ on:
 
 jobs:
   Build-ALNILAM:
-    uses: JaredDevAxity/AR_26_A_ARCHERNAR_ACTIONS/.github/workflows/testALNILAM.yml@main 
+    uses: JaredDevAxity/AR_26_A_ARCHERNAR_ACTIONS/.github/workflows/compileALNILAM.yml@main 
+    with:
+      node-version: '16' 
+      java-version: '11'
     secrets: inherit    
