--- a/.github/workflows/AlnilamSolutionWorkflow.yml
+++ b/.github/workflows/AlnilamSolutionWorkflow.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  Build-ALNILAM:
+  ALNILAM:
     uses: JaredDevAxity/AR_26_A_ARCHERNAR_ACTIONS/.github/workflows/compileALNILAM.yml@main  
     with:  
       node-version: '18'   
