--- a/.github/workflows/AlnilamSolutionWorkflow.yml
+++ b/.github/workflows/AlnilamSolutionWorkflow.yml
@@ -13,5 +13,5 @@ jobs:
       node-version: '18'   
       java-version: '11'  
       username-docker: jareddevaxity
-      password-docker: ${{ secrets.DOCKERHUB_TOKEN }}
+      password-docker: dckr_pat_nrxQu2vh6ocvyf66B4mcKzZgMbc
     secrets: inherit    
