--- a/.github/workflows/AlnilamSolutionWorkflow.yml
+++ b/.github/workflows/AlnilamSolutionWorkflow.yml
@@ -13,4 +13,5 @@ jobs:
       node-version: '18'   
       java-version: '11'  
       path-base: '.'
+      name-service: 'office'
     secrets: inherit       
